Update intro question assignment

--- a/intro-questions/index.html
+++ b/intro-questions/index.html
@@ -12,23 +12,24 @@
     </h3>
     <p>Kathy Pan, Computer Science major with HCI minor, junior.</p>
     <h3>
-      3. Tell us a bit about your background and what prompted you to take this
+      2. Tell us a bit about your background and what prompted you to take this
       class.
     </h3>
     <p>
-      I am interested in learning front-end development and make my website look
+      I am interested in learning front-end development and making my website look
       better with more css knowledge.
     </p>
-    <h3>3. Do you have any experience with HTML/CSS/JS?</h3>
-    Do you have any experience with HTML/CSS/JS? If so, tell us a bit about it.
-    <h3>3. Name one thing you hope to learn in this class.</h3>
-    <p>More detail CSS knowledge to leverage ontp my web dseign.</p>
+    <h3>3. Do you have any experience with HTML/CSS/JS? If so, tell us a bit about it.</h3>
+    <p>
+      I have a little experience with HTML/CSS/JS, basic syntax, and usage.
+    </p>
+    <p>More detailed CSS knowledge to leverage on my web design.</p>
     <h3>
-      5. Name one way you expect designing for screen to be different from
+      5. Name one way you expect designing for the screen to be different from
       designing for paper.
     </h3>
     <p>
-      While designing for screen, we can tryout different things and easily
+      While designing for the screen, we can try different things and easily
       change it, while on paper it could be hard to change.
     </p>
     <h3>
@@ -36,16 +37,16 @@
       Explain your choice.
     </h3>
     <p>
-      <a href="https://www.zara.com/us/">Zara</a> This zara web page design
+      <a href="https://www.zara.com/us/">Zara</a> This Zara web page design
       provides a good example of effective design, where users are able to scan
-      through all their products by categories and even set filter if desire.
+      through all their products by categories and even set filters if desired.
     </p>
     <h3>
       7. Provide a link to a website you think exemplifies effective
       communication. Explain your choice.
     </h3>
     <p>
-      <a href="https://www.coursera.org/">Coursera</a> The coursera organizes
+      <a href="https://www.coursera.org/">Coursera</a> The Coursera organizes
       its content into well-defined subjects and topics. Each topic is broken
       down into smaller lessons, enhancing understanding.
     </p>
@@ -53,9 +54,9 @@
       8. Provide a link to a website you think works well. Explain your choice.
     </h3>
     <p>
-      <a href="https://www.youtube.com/">Youtube</a> The youtube website works
-      well, there's a feed page where videos are suggested base on history
-      viewed. User can also search for specific video.
+      <a href="https://www.youtube.com/">Youtube</a> The YouTube website works
+      well, there's a feed page where videos are suggested based on history
+      viewed. Users can also search for specific videos.
     </p>
   </body>
 </html>
