--- a/movie-quotes/index.html
+++ b/movie-quotes/index.html
@@ -12,8 +12,8 @@
       <h2>Quotes</h2>
       <ol>
         <li>
+          <h3>Scene One</h3>
           <p>
-            <h3>Scene One</h3>
             <strong>Dr. Peter Venkman:</strong> "What I'd really like to do is
             talk to Dana. Dana? It's Peter."
           </p>
@@ -21,33 +21,86 @@
             <strong>Dana Barrett:</strong> "There is no Dana, there is only
             Zuul."
           </p>
-          <p><strong>Dr. Peter Venkman:</strong> "Oh, Zuulie, you nut, now c'mon. Just relax, c'mon. I want to talk to Dana. Dana, Dana. "Can I talk to Dana?</p>
-          <p><strong>Dana Barrett:</strong> "in an inhuman demonic voice There is no Dana, only Zuul!"</p>
-          <p><strong>Dr. Peter Venkman:</strong> "What a lovely singing voice you must have."</p>
+          <p>
+            <strong>Dr. Peter Venkman:</strong> "Oh, Zuulie, you nut, now c'mon.
+            Just relax, c'mon. I want to talk to Dana. Dana, Dana. "Can I talk
+            to Dana?
+          </p>
+          <p>
+            <strong>Dana Barrett:</strong> "in an inhuman demonic voice There is
+            no Dana, only Zuul!"
+          </p>
+          <p>
+            <strong>Dr. Peter Venkman:</strong> "What a lovely singing voice you
+            must have."
+          </p>
         </li>
         <li>
-            <h3>Scene Two</h3>
-            <p><strong>Dr. Peter Venkman:</strong> "This city is headed for a disaster of biblical proportions."</p>
-            <p><strong>Mayor:</strong> "What do you mean, 'biblical?'"</p>
-            <p><strong>Dr Ray Stantz:</strong> "What he means is Old Testament, Mr. Mayor, real wrath of God type stuff."</p>
-            <p><strong>Dr. Peter Venkman:</strong> "Exactly."</p>
-            <p><strong>Dr Ray Stantz: </strong> "Fire and brimstone coming down from the skies! Rivers and seas boiling!"</p>
-            <p><strong>Dr. Egon Spengler:</strong> "Forty years of darkness! Earthquakes, volcanoes..."</p>
-            <p><strong>Winston Zeddemore:</strong> "The dead rising from the grave!"</p>
-            <p><strong>Dr. Peter Venkman:</strong> "Human sacrifice, dogs and cats living together... mass hysteria!"</p>
-            <p><strong>Mayor:</strong> "All right, all right! I get the point!"</p>
+          <h3>Scene Two</h3>
+          <p>
+            <strong>Dr. Peter Venkman:</strong> "This city is headed for a
+            disaster of biblical proportions."
+          </p>
+          <p><strong>Mayor:</strong> "What do you mean, 'biblical?'"</p>
+          <p>
+            <strong>Dr Ray Stantz:</strong> "What he means is Old Testament, Mr.
+            Mayor, real wrath of God type stuff."
+          </p>
+          <p><strong>Dr. Peter Venkman:</strong> "Exactly."</p>
+          <p>
+            <strong>Dr Ray Stantz: </strong> "Fire and brimstone coming down
+            from the skies! Rivers and seas boiling!"
+          </p>
+          <p>
+            <strong>Dr. Egon Spengler:</strong> "Forty years of darkness!
+            Earthquakes, volcanoes..."
+          </p>
+          <p>
+            <strong>Winston Zeddemore:</strong> "The dead rising from the
+            grave!"
+          </p>
+          <p>
+            <strong>Dr. Peter Venkman:</strong> "Human sacrifice, dogs and cats
+            living together... mass hysteria!"
+          </p>
+          <p>
+            <strong>Mayor:</strong> "All right, all right! I get the point!"
+          </p>
         </li>
-        <li><h3>Scene Three</h3>
-            <p><i>[clearing away tables in the dining room to make room for the ghost trap]</i></p>
-            <p><strong>Dr Ray Stantz:</strong> I've gotta get this in the clear...!</p>
-            <p><strong>Dr. Peter Venkman:</strong> Wait, wait, wait! I've always wanted to do this...</p>
-            <p><i>[He yanks a tablecloth off of a table, overturning and shattering everything except the centerpiece in the middle]</i></p>
-            <p><strong>Dr. Peter Venkman:</strong><i> [triumphantly]</i> And the flowers are still standing!</p>
+        <li>
+          <h3>Scene Three</h3>
+          <p>
+            <i
+              >[clearing away tables in the dining room to make room for the
+              ghost trap]</i
+            >
+          </p>
+          <p>
+            <strong>Dr Ray Stantz:</strong> I've gotta get this in the clear...!
+          </p>
+          <p>
+            <strong>Dr. Peter Venkman:</strong> Wait, wait, wait! I've always
+            wanted to do this...
+          </p>
+          <p>
+            <i
+              >[He yanks a tablecloth off of a table, overturning and shattering
+              everything except the centerpiece in the middle]</i
+            >
+          </p>
+          <p>
+            <strong>Dr. Peter Venkman:</strong><i> [triumphantly]</i> And the
+            flowers are still standing!
+          </p>
         </li>
       </ol>
     </div>
     <div class="intro">
-        <img src="https://m.media-amazon.com/images/M/MV5BNGYzNDM0M2QtZDFkNy00OTI2LWIyNjctNjNhNDM5Zjk3NzU2XkEyXkFqcGdeQXVyNjQ3MDg0MTY@._V1_.jpg" alt="picture" id="picture">
+      <img
+        src="https://m.media-amazon.com/images/M/MV5BNGYzNDM0M2QtZDFkNy00OTI2LWIyNjctNjNhNDM5Zjk3NzU2XkEyXkFqcGdeQXVyNjQ3MDg0MTY@._V1_.jpg"
+        alt="picture"
+        id="picture"
+      />
     </div>
   </body>
 </html>
