--- a/exercises/floats/index.html
+++ b/exercises/floats/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://wudesign.me/resources/basic-layout/css/styles.css"
     />
-    <link href="styles.css" rel="stylesheet"></link>
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <article>
