--- a/buttons/index.html
+++ b/buttons/index.html
@@ -33,6 +33,14 @@
       href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner&family=Oswald:wght@300;400;500;600;700&family=Raleway:wght@400;500;700;800&family=Rock+Salt&family=Sacramento&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/2a2ee7c4da.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Croissant+One&family=Noto+Sans&family=Playfair+Display&family=Prata&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400;1,700&family=Source+Code+Pro&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
@@ -71,8 +79,10 @@
 
       <div class="button_container">
         <a href="https://www.tesla.com/" target="_blank" id="btn_tesla"
-          >tesla</a
-        >
+          ><img
+            src="https://i.ebayimg.com/images/g/bfUAAOSw88RbDbfe/s-l1600.jpg"
+            alt="Tesla Image"
+        /></a>
       </div>
       <div class="button_container">
         <a
@@ -85,6 +95,44 @@
 
       <div class="button_container">
         <a href="https://www.moo.com/us/" target="_blank" id="btn_moo">MOO</a>
+      </div>
+
+      <div class="button_container">
+        <a href="http://www.nike.com/us/en_us/" target="_blank" id="btn_nike"
+          >Nike</a
+        >
+      </div>
+      <div class="button_container">
+        <a href="https://www.stjude.org/" target="_blank" id="btn_stjude"
+          >ST JUDE</a
+        >
+      </div>
+
+      <div class="button_container">
+        <a href="https://www.lyft.com/" target="_blank" id="btn_lyft"
+          ><i class="fa-brands fa-lyft"></i
+        ></a>
+      </div>
+
+      <div class="button_container">
+        <a href="https://www.facebook.com/" id="btn_facebook" target="_blank"
+          >Facebook</a
+        >
+      </div>
+
+      <div class="button_container">
+        <a
+          href="https://www.mollyjogger.com/"
+          id="btn_mollyjogger"
+          target="_blank"
+          >Mollyjogger</a
+        >
+      </div>
+
+      <div class="button_container">
+        <a href="http://thecolorrun.com/" target="_blank" id="btn_colorrun"
+          ><span>Color Run</span></a
+        >
       </div>
     </main>
   </body>
