--- a/microsite/fully-realized/index.html
+++ b/microsite/fully-realized/index.html
@@ -94,6 +94,13 @@
             class="image-5"
             src="https://miro.medium.com/v2/resize:fit:1400/1*02_oOVTcRIt4BFzZAXfXDA.jpeg"
           />
+          <p class="lettermeaning">
+            The Whalestoe Letters (2000), by the American fiction author Mark Z.
+            Danielewski, is an epistolary novella which more fully develops the
+            literary correspondence between Pelafina H. Lièvre and her son
+            Johnny from 1982 - 1989, characters first introduced in
+            Danielewski's prior work House of Leaves.
+          </p>
         </div>
       </div>
     </div>
